Add accuracy, fix color card.

--- a/styles.css
+++ b/styles.css
@@ -46,8 +46,8 @@ div {
 }
 
 .gray {
-	background-color: gray;
-	border: .5px solid gray;
+	background-color: #161e2b;
+	border: .5px solid #161e2b;
 }
 
 .brown {
